css fix for filterselect (suggestmenu was too wide, causing scrollbars in some situations)
svn changeset:2787/svn branch:trunk

--- a/src/com/itmill/toolkit/terminal/gwt/public/default/select/filterselect.css
+++ b/src/com/itmill/toolkit/terminal/gwt/public/default/select/filterselect.css
@@ -37,7 +37,9 @@
 	line-height: 18px;
 	margin-top: -1px;
 }
-
+.i-filterselect-suggestmenu {
+	margin-left: -2px;
+}
 .i-filterselect-suggestmenu .gwt-MenuItem {
 	padding: 1px 5px;
 	cursor: pointer;
